fix footer on mobile and close triple spacing bug

--- a/app/static/scss/client/components/footer.scss
+++ b/app/static/scss/client/components/footer.scss
@@ -66,6 +66,7 @@ footer {
             opacity: 0;
             position: absolute;
             right: 0;
+            top: -0.25rem;
             border-radius: 0;
             margin: 0;
             font-family: $slab;
@@ -112,4 +113,15 @@ footer {
 }
 .footer-spacer {
     height: ($footer-height + 2*$footer-padding);
+}
+
+@media screen and (max-width: $phone-max) {
+    .right {
+        float: none;
+        margin-bottom: 1.5rem;
+    }
+
+    form {
+        margin-bottom: 0.5rem !important;
+    }
 }
