--- a/app/static/scss/client/components/triple.scss
+++ b/app/static/scss/client/components/triple.scss
@@ -68,9 +68,14 @@ $image-separation: 1.25rem;
     .triple .small, .double .small {
         width: 100%;
         padding: 0!important;
-        margin-bottom: 1rem;
         .text {
-            padding-bottom: 0;
+            padding-bottom: 2rem !important;
+        }
+        .inner {
+            padding: 0 !important;
+        }
+        &:not(:last-child) {
+            margin-bottom: 1rem;
         }
     }
 }
